revolutionary_refactoring: add query parameter withCategories on management products.
